widget added (next button and gallery button work)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#4287f5</color>
     <color name="colorPrimaryDark">#306bc9</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="tr_gray">#80FFFFFF</color>
 </resources>
