--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -36,6 +36,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_delete"
+            android:duplicateParentState="true"
             android:clickable="true"
             android:focusable="true"/>
     </RelativeLayout>
@@ -65,15 +66,18 @@
         android:focusable="true"
         android:elevation="2dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_back"
+            android:duplicateParentState="true"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            />
     </RelativeLayout>
 
 
