--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -31,6 +31,7 @@
         >
 
         <ImageView
+            android:id="@+id/delete_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_centerHorizontal="true"
@@ -70,6 +71,7 @@
         >
 
         <ImageView
+            android:id="@+id/back_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
