widget completed. sync from widget to setting completed. sync from setting to widget is incomplete.

--- a/app/src/main/res/layout/big_wallpaper_widget.xml
+++ b/app/src/main/res/layout/big_wallpaper_widget.xml
@@ -19,7 +19,8 @@
             android:id="@+id/power_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_widget_power" />
+            android:src="@drawable/ic_widget_power"
+            android:tint="@color/black"/>
     </LinearLayout>
 
     <LinearLayout
