--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#306bc9</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="tr_gray">#80FFFFFF</color>
+    <color name="active_green">#49AE43</color>
+    <color name="black">#000000</color>
 </resources>
