--- a/app/src/main/res/xml/wallpaper_widget_info.xml
+++ b/app/src/main/res/xml/wallpaper_widget_info.xml
@@ -4,6 +4,6 @@
     android:initialLayout="@layout/big_wallpaper_widget"
     android:minWidth="250dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/ic_big_widget"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
