--- a/app/src/main/res/layout/big_wallpaper_widget.xml
+++ b/app/src/main/res/layout/big_wallpaper_widget.xml
@@ -33,7 +33,8 @@
             android:id="@+id/next_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_widget_next"/>
+            android:src="@drawable/ic_widget_next"
+            android:tint="@color/black"/>
     </LinearLayout>
 
     <LinearLayout
@@ -46,7 +47,8 @@
             android:id="@+id/time_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_widget_5m"/>
+            android:src="@drawable/ic_widget_5m"
+            android:tint="@color/black"/>
     </LinearLayout>
 
     <LinearLayout
@@ -59,7 +61,8 @@
             android:id="@+id/shuffle_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_widget_shuffle"/>
+            android:src="@drawable/ic_widget_shuffle"
+            android:tint="@color/black"/>
     </LinearLayout>
 
     <LinearLayout
@@ -71,7 +74,8 @@
             android:id="@+id/gallery_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_widget_gallery"/>
+            android:src="@drawable/ic_widget_gallery"
+            android:tint="@color/black"/>
     </LinearLayout>
 
 </LinearLayout>
